Fix inability to scroll on mobile landscape

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -33,6 +33,7 @@
     flex-direction: column;
     height: calc(100vh - 3rem);
     left: 0;
+    overflow: scroll;
     padding: 2rem 0 5rem;
     position: fixed;
     top: 3rem;
